# 20Questions-CSC

./: 20q.cpp  CMakeLists.txt  game.cpp  game.h  tree.h
